tests/generated/075_length_is.out
Fatal error: Call to undefined method DtlIter::length_is() in /home/rune/workspace/php-misc/php-dtl-iterator/tests/django-generated/075_length_is.php on line 5